--- a/docs/source/tutorial/quick-start.ipynb
+++ b/docs/source/tutorial/quick-start.ipynb
@@ -52142,10 +52142,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 30,
    "metadata": {
     "ExecuteTime": {
-     "start_time": "2019-08-30T13:00:25.061Z"
+     "end_time": "2019-08-30T13:01:31.480914Z",
+     "start_time": "2019-08-30T13:00:46.684603Z"
     }
    },
    "outputs": [],
@@ -52155,13 +52156,29 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 31,
    "metadata": {
     "ExecuteTime": {
-     "start_time": "2019-08-30T13:00:25.062Z"
+     "end_time": "2019-08-30T13:01:31.486253Z",
+     "start_time": "2019-08-30T13:01:31.482363Z"
     }
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Kc98_2012_SUEWS_5.txt\n",
+      "Kc98_2012_snow_5.txt\n",
+      "Kc98_2012_RSL_5.txt\n",
+      "Kc98_2012_DailyState.txt\n",
+      "Kc98_2012_SUEWS_60.txt\n",
+      "Kc98_2012_snow_60.txt\n",
+      "Kc98_2012_RSL_60.txt\n",
+      "InitialConditionsKc98_2013_EndofRun.nml\n"
+     ]
+    }
+   ],
    "source": [
     "for file_out in list_path_save:\n",
     "    print(file_out.name)"
