update `note` box

--- a/docs/source/tutorial/impact-studies.ipynb
+++ b/docs/source/tutorial/impact-studies.ipynb
@@ -428,7 +428,8 @@
     "ExecuteTime": {
      "end_time": "2020-07-05T23:38:58.805601Z",
      "start_time": "2020-07-05T23:38:58.666883Z"
-    }
+    },
+    "scrolled": true
    },
    "outputs": [
     {
@@ -456,8 +457,20 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Construct a function to perform parallel `supy` simulations with specified `diff_airtemp_test`: the difference in air temperature between the one used in simulation and loaded from sample dataset.\n",
-    "*Note: forcing data `df_forcing` has different data structure from `df_state_init`; so we need to modify `run_supy_mgrids` to implement a `run_supy_mclims` for different climate scenarios*"
+    "### Construct a function to perform parallel `supy` simulations with specified `diff_airtemp_test`: the difference in air temperature between the one used in simulation and loaded from sample dataset."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "<div class=\"alert alert-info\">\n",
+    "\n",
+    "Note\n",
+    "\n",
+    "forcing data `df_forcing` has different data structure from `df_state_init`; so we need to modify `run_supy_mgrids` to implement a `run_supy_mclims` for different climate scenarios*\n",
+    "\n",
+    "</div> "
    ]
   },
   {
