--- a/docs/source/tutorial/quick-start.ipynb
+++ b/docs/source/tutorial/quick-start.ipynb
@@ -381,6 +381,7 @@
    ],
    "source": [
     "df_state_init, df_forcing = sp.load_SampleData()\n",
+    "grid = df_state_init.index[0]\n",
     "# by default, two years of forcing data are included;\n",
     "# to save running time for demonstration, we only use one year in this demo\n",
     "df_forcing=df_forcing.loc['2012'].iloc[1:]"
